# aldutex

./: Cargo.toml  README.md
src/: ast.rs  cache.rs  error.rs  lexer.rs  lib.rs  parser.rs
src/fonts/: loader.rs  math_font.rs  metrics.rs  mod.rs  shaper.rs
src/layout/: boxes.rs  image.rs  math.rs  mod.rs  page.rs  paragraph.rs  paragraph.rs.orig  table.rs
src/renderer/: mod.rs  pdf.rs
tests/: layout_tests.rs  lexer_tests.rs  math_tests.rs  parser_tests.rs  render_tests.rs  simple_pdf_test.rs
tests/golden/: basic_text.tex  itemize.tex  math_display.tex  math_inline.tex  sections.tex  table.tex
